# mini-http-server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
http_server/: main.py  protocol.py  server.py
src/: TCPServer.py  http_parser.py  http_request.py  http_server.py  main.py  tcp_server.py
src/app/: main.py  run_http_server.py  run_load_balancer.py  run_proxy_server.py
src/app/http/: models.py  protocol.py  server.py
src/app/load_balancer/: server.py
src/app/proxy/: server.py
src/app/tcp/: server.py
src/http/: http_parser.py  http_response.py  http_response_builder.py  http_server.py
tests/: test_tcp_server.py
tests/http/: test_http_parser.py  test_protocol.py  test_server.py
tests/http_server/: test_protocol.py  test_server.py
tests/load_balancer/: __init__.py  test_server.py
tests/proxy/: test_server.py
tests/tcp/: test_server.py
