[project]
name = "raw-network-stack"
version = "0.1.0"
description = "Raw TCP Network Stack including HTTP Server, Reverse Proxy, and Load Balancer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
    "ty>=0.0.33",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
